--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,9 +1,9 @@
-<h1> Please login!</h1>
+<h1> Login</h1>
 
 <form action="/login" method="post">
     <label for="email"> Email: </label>
-    <input type="text" name="email" required>
+    <input type="text" name="email" id="email" required>
     <label for="password"> Password: </label>
-    <input type="password" name="password" required>
-    <input type="submit" value="submit">
+    <input type="password" name="password"  id="password" required>
+    <input type="submit" value="Login">
 </form>
