--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,23 +1,16 @@
 <div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
-  <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
+  <h1> Solid Reads </h1>
+  <br>
+  <h2> About </h2>
+  <br>
+  <p> This is a web app for book lovers! </p>
+  <br>
+  <p> Have you ever liked a book so much that you just have to tell people that they should be reading this right now? Go ahead and login to begin!</p>
+  <p> Solid Reads is safe place where you can write riveting reviews about a book you just read.</p>
+  <br>
+  <a href='/signup'> Sign Up! </a>
+  <a href='/login'> Log In! </a>
 
-    <div class="content">
-      <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
-      as expected. To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
-      your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
-    </div>
 
-    <div class="sidebar">
-      <h3>Environment</h3>
-      <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
-      </ul>
-    </div>
 
-  </div>
 </div>
