updated welcome page - updated layout to have navigation - updated helper methods

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,11 @@
   </head>
   <body>
     <div class="wrapper">
-
+      <% if logged_in? %>
+      <a href='/'> All Reviews </a>
+      <a href='/'> Create a Review </a>
+      <a href='/logout'> Log Out </a>
+      <%end%>
         <%= yield %>
 
       <footer class="branding">
