--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -8,8 +8,7 @@
   <p> Have you ever liked a book so much that you just have to tell people that they should be reading this right now? Go ahead and login to begin!</p>
   <p> Solid Reads is safe place where you can write riveting reviews about a book you just read.</p>
   <br>
-  <a href='/signup'> Sign Up! </a>
-  <a href='/login'> Log In! </a>
+  <a href='/signup'> Sign Up! </a> OR <a href='/login'> Log In! </a>
 
 
 
