implemented READ functionality

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,12 +18,12 @@
 
     <div class="navigation">
       <% if logged_in? %>
-        <a href='/'> All Reviews </a>
-        <a href='/'> Create a Review </a>
+        <a href='/posts'> All Posts </a>
+        <a href='/'> Create a Post </a>
         <a href='/logout'> Log Out </a>
       <%end%>
     </div>
-    
+
         <%= yield %>
 
       <footer class="branding">
