--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -7,3 +7,5 @@
     <input type="password" name="password"  id="password" required>
     <input type="submit" value="Login">
 </form>
+
+<a href="/">Back</a>
