--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,4 @@
-<h1><%=@user.name %></h1>
+<%= @user.each do |user|%>
+    <h1><%=@user.name %></h1>
+    <strong> Profile Bio: <%= user.profile_bio %></strong>
+<% end %>
