--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,3 @@
-<%= @user.each do |user|%>
-    <h1><%=@user.name %></h1>
-    <strong> Profile Bio: <%= user.profile_bio %></strong>
-<% end %>
+    <h1>Name: <%= @user.name %> </h1>
+    <br>
+    <strong> Profile Bio: <%= @user.profile_bio %></strong>
