added CREATE functionality to the posts

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,8 +18,8 @@
 
     <div class="navigation">
       <% if logged_in? %>
-        <a href='/posts'> All Posts </a>
-        <a href='/'> Create a Post </a>
+        <a href='/posts'> All Posts | </a>
+        <a href='/posts/new'> Create a Post | </a>
         <a href='/logout'> Log Out </a>
       <%end%>
     </div>
