--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -2,3 +2,5 @@
 <strong>Posted At: <%= @post.created_at %></strong>
 <p><%= @post.review %></p>
 <p>By: <%= @post.user.name%></p>
+
+<a href="/posts/<%= @post.id %>/edit"> Edit Review </a>
