--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -4,7 +4,8 @@
     <label for="title"> Title: </label>
     <input type="text" name="title" id="title">
     <label for="review"> Book Review: </label>
-    <input type="text" name="review" id="review">
+    <textarea name="review" style="width:auto; height:auto;"></textarea>
+    <br><br>
     <input type="submit" value="Post It!">
 </form>
 <br>
