--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,9 +14,20 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+
     <div class="wrapper">
 
-    <div class="navigation">
+    <% if flash[:error] %>
+      <h3 style="color: red"><%= flash[:error] %></h3>
+    <% end %>
+
+    <% if flash[:message] %>
+      <h3 style="color: green"><%= flash[:message] %></h3>
+    <% end %>
+
+
+
+    <div class="nav">
       <% if logged_in? %>
         <a href='/posts'> All Posts | </a>
         <a href='/posts/new'> Create a Post | </a>
