--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -3,9 +3,13 @@
 <p><%= @post.review %></p>
 <p>By: <%= @post.user.name%></p>
 
-<a href="/posts/<%= @post.id %>/edit"> Edit Review </a>
-<br><br>
-<form action="/posts/<%= @post.id %>" method="post">
-    <input type="hidden" name="_method" value="delete">
-    <input type="submit" value="Delete This Review">
-</form>
+<%if authorized_to_edit?(@post)%>
+    <a href="/posts/<%= @post.id %>/edit"> Edit Review </a>
+
+    <br><br>
+    <form action="/posts/<%= @post.id %>" method="post">
+        <input type="hidden" name="_method" value="delete">
+        <input type="submit" value="Delete This Review">
+    </form>
+<%end%>
+
