added book author to post controller and views

--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,4 +1,6 @@
 <h3><%= @post.title%></h3>
+<strong>Book Author: <%= @post.author %></strong>
+<br>
 <strong>Posted At: <%= @post.created_at %></strong>
 <p><%= @post.review %></p>
 <p>By: <%= @post.user.name%></p>
