--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -3,6 +3,8 @@
 <form action="/posts" method="post">
     <label for="title"> Title: </label>
     <input type="text" name="title" id="title">
+    <label for="author"> Book Author: </label>
+    <input type="text" name="author" id="author">
     <label for="review"> Book Review: </label>
     <textarea name="review" style="width:auto; height:auto;"></textarea>
     <br><br>
