improved UI in user signup

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -8,7 +8,7 @@
     <label for="password">Password: </label>
     <input type="password" name="password" id="password">
     <label for="profile_bio">Tell us about yourself: </label>
-    <input type="text" name="profile_bio" id="profile_bio">
+    <textarea name="profile_bio" style="width:auto; height:auto;"></textarea>
     <br>
     <input type="submit" value="Submit">
 </form>
