general improvement of UI

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,12 +1,11 @@
 <div class="container">
   <h1> Solid Reads </h1>
   <br>
-  <h2> About </h2>
+  <h2> About: </h2>
   <br>
-  <p> This is a web app for book lovers! </p>
+  <p> This is a web app for book lovers!</p>
   <br>
-  <p> Have you ever liked a book so much that you just have to tell people that they should be reading this right now? Go ahead and login to begin!</p>
-      Solid Reads is safe place where you can write riveting reviews about a book you just read.</p>
+  <p> Have you ever liked a book so much that you just have to tell people why they should be reading this right now? Go ahead and login to begin! Solid Reads is safe place where you can write riveting reviews about a book you just read.</p>
   <br>
   <a href='/signup'> Sign Up! </a> OR <a href='/login'> Log In! </a>
 
