--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,12 +13,12 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightslategray;
+    background-color: #474747;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
   }
-
+/* #DCEDC2 */
   .wrapper {
     background: lightyellow;
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
